Graph refactoring complete